--- a/GoldenDict/styles/Dark/qt-style.css
+++ b/GoldenDict/styles/Dark/qt-style.css
@@ -996,6 +996,8 @@ MainWindow #searchPane QLabel
 {
   /* font in panes headers */
   font-size:  9.1pt;
+  margin-top:    4px;
+  margin-bottom: 4px;
 }
 MainWindow #historyPane   #historyPaneTitleBar #historyLabel,
 MainWindow #historyPane   #historyPaneTitleBar #historyCountLabel,
